<resources>
    <string name="app_name">BMI Calculator</string>
    <string name="peso">Enter your weight (kg):</string>
    <string name="altura">Enter your height (m):</string>
    <string name="hint_peso">Ex.: 80</string>
    <string name="hint_altura">Ex.: 1.70</string>
    <string name="botao_imc">Calculate BMI</string>
    <string name="txt_resultado">Your BMI: </string>
    <string name="abaixo_peso">You are underweight!</string>
    <string name="peso_ideal">You are the perfect weight!</string>
    <string name="acima_peso">You are slightly overweight!</string>
    <string name="obesidade_I">You are with obesity grade I!</string>
    <string name="obesidade_II">You are with obesity grade II!</string>
    <string name="obesidade_III">You are Obesity grade III!</string>
    <string name="toast_ideal">Congratulations!</string>
    <string name="toast_anormal">More care of your health!</string>
</resources>
